--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a  href="index.html">Главная</a></li>
-                                        <li><a href="#">Презентация</a></li>
-                                        <li><a href="#">Тарифы</a></li>
-                                        <li><a href="service.html">Бесплатно</a></li>
-                                        <li><a href="contact.html">Контакты</a></li>
+                                        <li><a  href="/">Главная</a></li>
+                                        <li><a href="#video_id">Презентация</a></li>
+                                        <li><a href="#tarifs">Тарифы</a></li>
+                                        <li><a href="#our_team">Команда</a></li>
+                                        <li><a href="#pochta">Контакты</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -121,7 +121,7 @@
                         <div class="slider_text">
                             <h3>Убойная <br> Мотивация<span></span></h3>
                             <p>Гарантируем выполнение ваших задач</p>
-                            <a href="/user" class="boxed-btn4">ПОПРОБОВАТЬ БЕСПЛАТНО</a>
+                            <a href="tel:+74951234567" class="boxed-btn4">ПОПРОБОВАТЬ БЕСПЛАТНО</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
@@ -178,13 +178,13 @@
 
 
 
-    <div id="video_id" class="service_area">
+    <div id="tarifs" class="service_area">
         <div class="container">
             <div class="row justify-content-center ">
                 <div class="col-12">
                     <div class="section_title text-center mb-95">
                         <h3>Тарифы</h3>
-                        <p>Почему наш сервис подойдет именно вам? Ответы на этот и многие интерестные вопросы мы постарались собрать в этом презентационном видео. </p>
+                        <p>Здесь Вы можете выбрать наиболее подходящий для ваших заадч тарифный план:</p>
                     </div>
                 </div>
             </div>
@@ -195,10 +195,10 @@
                          <div class="service_content text-center">
                             <h3>Стартовый</h3>
                             <h2><b>799</b> руб./мес.</h2>
-                            <ul>
+                            <ul class="new-ul">
                                 <li>2 звонка в неделю</li>
                                 <li>10 мин на встречу</li>
-                                <li>До 8 задач и 1 цели</li>
+                                <li>До 8 задач</li>
                             </ul>
                          </div>
                     </div>
@@ -207,12 +207,12 @@
                     <div class="single_service active">
                          
                          <div class="service_content text-center">
-                            <h3>Стартовый</h3>
+                            <h3>Эффективный</h3>
                             <h2><b>1 800</b> руб./мес.</h2>
-                            <ul>
-                                <li>2 звонка в неделю</li>
-                                <li>10 мин на встречу</li>
-                                <li>До 8 задач и 1 цели</li>
+                            <ul class="new-ul">
+                                <li>6 звонков в неделю</li>
+                                <li>15 мин. на встречу</li>
+                                <li>До 20 задач</li>
                             </ul>
                          </div>
                     </div>
@@ -221,12 +221,12 @@
                     <div class="single_service">
                          
                          <div class="service_content text-center">
-                            <h3>Стартовый</h3>
+                            <h3>Безлимитный</h3>
                             <h2><b>5 000</b> руб./мес.</h2>
-                            <ul>
-                                <li>2 звонка в неделю</li>
-                                <li>10 мин на встречу</li>
-                                <li>До 8 задач и 1 цели</li>
+                            <ul class="new-ul">
+                                <li>50 звонков в неделю</li>
+                                <li>До 20 мин. на встречу</li>
+                                <li>До 50 задач</li>
                             </ul>
                          </div>
                     </div>
@@ -260,11 +260,11 @@
                 <div class="col-lg-6 offset-lg-1 col-md-6">
                     <div class="pet_info">
                         <div class="section_title">
-                            <h3><span>We care your pet </span> <br>
-                                As you care</h3>
-                            <p>Lorem ipsum dolor sit , consectetur adipiscing elit, sed do <br> iusmod tempor incididunt ut labore et dolore magna aliqua. <br> Quis ipsum suspendisse ultrices gravida. Risus commodo <br>
-                                viverra maecenas accumsan.</p>
-                            <a href="about.html" class="boxed-btn3">About Us</a>
+                            <h3><span>Конкурентные  </span> <br>
+                                Преимущества:</h3>
+                            <p>
+                            Нашей главной целью является достижение вами, ваших целей и задач, поэтому с этой целью мы применяем весь существующий инструментарий мотивационных методик и практик, а также применяем индивидуальный подход для достижения максимального эффекта!</p>
+                            <a href="tel:+74951234567" class="boxed-btn3">ЗАКАЗАТЬ</a>
                         </div>
                     </div>
                 </div>
@@ -332,13 +332,13 @@
     <!-- testmonial_area_end  -->
 
     <!-- team_area_start  -->
-    <div class="team_area">
+    <div id="our_team" class="team_area">
         <div class="container">
             <div class="row justify-content-center ">
                 <div class="col-lg-6 col-md-10">
                     <div class="section_title text-center mb-95">
                         <h3>Наша команда</h3>
-                        <p>Наша дружная команда всегда к вашим услугам!)</p>
+                        <p>Наша дружная команда всегда к вашим услугам, мы всегда проводим оценку качества наших сотрудников!</p>
                     </div>
                 </div>
             </div>
@@ -351,7 +351,7 @@
                         <div class="member_name text-center">
                             <div class="mamber_inner">
                                 <h4>Павел Смирнов</h4>
-                                <p>Оператор</p>
+                                <p>Оператор-Стажер</p>
                             </div>
                         </div>
                     </div>
@@ -377,7 +377,7 @@
                         <div class="member_name text-center">
                             <div class="mamber_inner">
                                 <h4>Антон Ильязов</h4>
-                                <p>Оператор</p>
+                                <p>Оператор-Наставник</p>
                             </div>
                         </div>
                     </div>
@@ -496,7 +496,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
-                            <p>"Motivate_us" - <script>document.write(new Date().getFullYear());</script> </p>
+                            <p>"Motivate-me.ru" - <script>document.write(new Date().getFullYear());</script> </p>
                         </p>
                     </div>
                 </div>
