--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="slider_text">
-                            <h3>Убойная <br> Мотивация<span></span></h3>
-                            <p>Гарантируем выполнение ваших задач</p>
+                            <h3>Online <br> Мотивация</h3>
+                            <p>Персональная мотивация по телефону!</p>
                             <a href="tel:+74951234567" class="boxed-btn4">ПОПРОБОВАТЬ БЕСПЛАТНО</a>
                         </div>
                     </div>
@@ -395,15 +395,15 @@
                         <div class="section_title text-center">
                             <h3>Наши контакты:</h3>
                             <p>Мы всегда готовы помочь вам с любыми вопросами и пожеланиями, вот наш телефон:</p>
-                            <h3>8 (812) 123-45-67</h3>
+                            <a href="tel:+74951234567"><h3>8 (812) 123-45-67</h3></a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                    <div class="col-12">
+                    <!-- <div class="col-12">
                         <h2 class="contact-title" style="color: #ffffff;">Контакты</h2>
-                    </div>
+                    </div> -->
                     <div class="col-12">
                         <form class="form-contact contact_form" action="https://formspree.io/f/mayajjeb" method="post" id="contactForm" novalidate="novalidate">
                             <div class="row">
